After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 706665 - classic: nautilus desktop lost transparency
classic: nautilus desktop lost transparency
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2013-08-23 13:44 UTC by Matthias Clasen
Modified: 2013-08-26 22:40 UTC
See Also:
GNOME target: 3.10
GNOME version: ---


Attachments
Make sure the desktop window is transparent (1.37 KB, patch)
2013-08-26 21:21 UTC, Matthias Clasen
committed Details | Review

Description Matthias Clasen 2013-08-23 13:44:43 UTC
if I log into a classic mode session with 3.9.90, I am greeted with a giant gray square :-(
Comment 1 Matthias Clasen 2013-08-23 13:45:03 UTC
this might also be a gtk / csd bug, I guess
Comment 2 Matthias Clasen 2013-08-26 21:21:18 UTC
Created attachment 253180 [details] [review]
Make sure the desktop window is transparent

The code was just assuming that setting an rgba visual is enough
to make a window see-through. This assumption was invalidated
by the GTK+ csd work that happened this cycle. We can fix this
by explicitly setting the background color of the desktop
window.
Comment 3 Cosimo Cecchi 2013-08-26 21:36:44 UTC
Review of attachment 253180 [details] [review]:

Looks good to me.
Comment 4 Matthias Clasen 2013-08-26 22:40:20 UTC
Attachment 253180 [details] pushed as 95be14b - Make sure the desktop window is transparent