Make sure the desktop window is transparent

The code was just assuming that setting an rgba visual is enough
to make a window see-through. This assumption was invalidated
by the GTK+ csd work that happened this cycle. We can fix this
by explicitly setting the background color of the desktop
window.

https://bugzilla.gnome.org/show_bug.cgi?id=706665